fix IE home page help text overlap issue

--- a/app/assets/stylesheets/peoplefinder/peoplefinder-ie7.css.scss
+++ b/app/assets/stylesheets/peoplefinder/peoplefinder-ie7.css.scss
@@ -3,7 +3,7 @@
 @import "peoplefinder_colours";
 @import "peoplefinder_ie_colours";
 
-// layout stuff
+// banner hacks
 #global-header .header-wrapper .header-global {
   .header-app-name {
     margin: 0;
@@ -25,8 +25,7 @@
       }
       .profile-link{
         padding-right: 0 0.4em;
-        line-height: 18px;
-        text-align: right;
+        line-height: 1;
       }
       .logout-link {
         border-left: 1px solid $white;
@@ -59,25 +58,12 @@ h1, h2 {
   ol {
     li {
       display: inline;
-      // float: left;
       a{
         text-decoration: none;
       }
     }
   }
 }
-
-// homepage
-  .help-peoplefinder {
-    float: right;
-
-    p {
-      background: #ededed image-url('icon_info.png') scroll no-repeat 15px 20px;
-      padding: 20px 15px 20px 80px;
-      margin-top: 15px;
-      margin-left: 50px;
-    }
-  }
 
 // form
 form #working-days ul,
