--- a/app/assets/stylesheets/peoplefinder/peoplefinder-lt-ie9.css.scss
+++ b/app/assets/stylesheets/peoplefinder/peoplefinder-lt-ie9.css.scss
@@ -29,6 +29,19 @@
   }
 }
 
+#home-page {
+  .help-peoplefinder {
+    float: right;
+
+    p {
+      background: #ededed image-url('icon_info.png') scroll no-repeat 15px 20px;
+      padding: 20px 15px 20px 80px;
+      margin-top: 15px;
+      margin-left: 50px;
+    }
+  }
+}
+
 .editing-alert {
   background-color: $turqoise;
 }
